added documentation, minor css tweaks for better defaults

--- a/components/_modal.scss
+++ b/components/_modal.scss
@@ -1,4 +1,15 @@
-.modal-finesse {
+///
+/// @name Modal
+/// @group component
+/// @description
+///     The most basic of magnific popup themes (should be deleted or extended)
+///     as in this state its a little useless.
+///
+/// @example
+///     Refer to magnific-popup docs
+///
+
+.modal {
     position: relative;
     background: #FFF;
     padding: $base-spacing-unit;
