--- a/base/_lists.scss
+++ b/base/_lists.scss
@@ -10,11 +10,11 @@ ol {
     padding: 0 0 0 $base-spacing-unit;
 }
 
-ul > li {
+ul {
     list-style-type: disc;
 }
 
-ol > li {
+ol {
     list-style-type: decimal;
 }
 
