--- a/components/_card.scss
+++ b/components/_card.scss
@@ -1,9 +1,9 @@
 ///
-/// @name Card
+/// Very simple card component. Any consistently used modifiers
+/// should be added here.
+///
+/// @name card
 /// @group components
-/// @description
-///     Very simple card component. Any consistently used modifiers
-///     should be added here.
 ///
 /// @example
 ///     <div class="card">
