--- a/components/_modal.scss
+++ b/components/_modal.scss
@@ -1,9 +1,9 @@
 ///
-/// @name Modal
+/// The most basic of magnific popup themes (should be deleted or extended)
+/// as in this state its a little useless.
+///
+/// @name modal
 /// @group component
-/// @description
-///     The most basic of magnific popup themes (should be deleted or extended)
-///     as in this state its a little useless.
 ///
 /// @example
 ///     Refer to magnific-popup docs
