--- a/tools/_buttons.scss
+++ b/tools/_buttons.scss
@@ -1,10 +1,25 @@
 ///
-/// @name Buttons
+/// Creates modified versions of the button object classes using the applications
+/// colour palette. We only really need to modify the button modifiers that
+/// actually use the colours but putting them all here to avoid confusion.
+///
+/// @name buttons
 /// @group grid
-/// @description
-///     Creates modified versions of the button object classes using the applications colour palette.
-///     We only really need to modify the button modifiers that actually use the colours but putting them
-///     all here to avoid confusion.
+///
+/// @example
+///     <button class"btn--blue btn--hollow">Button text</button>
+///
+
+///
+/// The function used to fetch valid colour values from the $palletes and $palettes-default data maps. Function
+/// location is currently in `settings/_colours.scss` as other settings files require this function, it throws
+/// a error due to late declaration.
+///
+/// @name       buttons
+/// @group      tools
+/// @access     private
+/// @param      {string} $colour - A reference to an available palette (colour) in $palletes or $palettes-default.
+/// @return     {css} button modifier classes nested under the $color modifier
 ///
 /// @example
 ///     <button class"btn--blue btn--hollow">Button text</button>
