--- a/tools/_headings.scss
+++ b/tools/_headings.scss
@@ -1,8 +1,8 @@
 ///
-/// @name Headings
+/// Style any number of headings in one fell swoop.
+///
+/// @name headings
 /// @group tools
-/// @description
-///     Style any number of headings in one fell swoop.
 ///
 /// @example
 ///     .foo{
