--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -1,9 +1,9 @@
 ///
-/// @name Footer (Finesse)
+/// Basic 2 part footer with columned navigation and copyright strip.
+/// Both parts can be used individually.
+///
+/// @name footer-finesse
 /// @group components
-/// @description
-///     Basic 2 part footer with columned navigation and copyright strip.
-///     Both parts can be used individually.
 ///
 /// @example
 ///     <div class="footer-finesse">
@@ -34,7 +34,7 @@
 ///                 </div>
 ///             </div>
 ///         </div>
-///         <div class="footer__base">
+///         <div class="footer__strip">
 ///             <ul class="float--left">
 ///                 <li data-separator="|"><a href="#">Nav item</a></li>
 ///                 <li data-separator="|"><a href="#">Nav item</a></li>
@@ -77,7 +77,7 @@
         }
     }
 
-    .footer__base {
+    .footer__strip {
         @extend .cf;
         margin: 0;
         padding: $base-spacing-unit;
