--- a/components/_lozenge.scss
+++ b/components/_lozenge.scss
@@ -1,10 +1,10 @@
 ///
-/// @name Lozenge
+/// Creates a small tag like element for showing state/context. Modifier
+/// classes for each colour in the application are automatically created
+/// however by default the text colour will be white.
+///
+/// @name lozenge
 /// @group component
-/// @description
-///     Creates a small tag like element for showing state/context. Modifier
-///     classes for each colour in the application are automatically created
-///     however by default the text colour will be white.
 ///
 /// @example
 ///     <p>This <span class="loz">here</span> is a lozenge!</p>
