--- a/objects/_split.scss
+++ b/objects/_split.scss
@@ -1,8 +1,8 @@
 ///
-/// @name Split
-/// @group abstractions
-/// @description
-///     Simple split item for creating two elements floated away from one another.
+/// Simple split item for creating two elements floated away from one another.
+///
+/// @name split
+/// @group objects
 ///
 /// @example
 ///     <dl class="split">
@@ -22,7 +22,7 @@
 ///
 
 .split {
-    margin-left: 0;
+    padding-left: 0;
     list-style: none;
     text-align: right;
 }
@@ -30,5 +30,6 @@
     .split__title {
         float: left;
         clear: left;
+        margin: 0;
         text-align: left;
     }
