--- a/trumps/_clearfix.scss
+++ b/trumps/_clearfix.scss
@@ -1,10 +1,7 @@
 ///
-/// @name Clearfix
-/// @group trumps
-/// @description
-///     Micro clearfix, as per: css-101.org/articles/clearfix/latest-new-clearfix-so-far.php
-///     Extend the clearfix class with Sass to avoid the `.clearfix` class appearing
-///     over and over in your markup.
+/// Micro clearfix, as per: css-101.org/articles/clearfix/latest-new-clearfix-so-far.php
+/// Extend the clearfix class with Sass to avoid the `.cf` class appearing
+/// over and over in your markup.
 ///
 
 .cf,
