--- a/trumps/_columns.scss
+++ b/trumps/_columns.scss
@@ -1,11 +1,5 @@
 ///
-/// @name Columns
-/// @group helpers
-/// @description
-///     Here we can set elements in columns of text using CSS3
-///
-/// @example
-///     <p class="text-cols--2"></p>
+/// Here we can set elements in columns of text using CSS3.
 ///
 
 %text-cols{
