moved lozenge to objects, minor css fixes based on display in kitchen sink (frontify)

--- a/_finesse.scss
+++ b/_finesse.scss
@@ -65,6 +65,7 @@
 @import "objects/flag";
 @import "objects/grid";
 @import "objects/island";
+@import "objects/lozenge";
 @import "objects/media";
 @import "objects/nav";
 @import "objects/split";
@@ -78,7 +79,6 @@
 @import "components/alerts";
 @import "components/card";
 @import "components/footer";
-@import "components/lozenge";
 @import "components/modal";
 @import "components/pagination";
 @import "components/prototype";
