--- a/components/_alerts.scss
+++ b/components/_alerts.scss
@@ -16,6 +16,7 @@
     padding: $half-spacing-unit;
     font-size: 14px;
     line-height: 1.4;
+    background-color: getColor('grey', 'dark');
     color: #ffffff;
 }
 
