--- a/components/_pagination.scss
+++ b/components/_pagination.scss
@@ -23,13 +23,12 @@
     a {
         padding: 5px 9px;
         line-height: 1;
-        background: getColour('grey', 'light');
+        border: $base-border;
     }
 
     .current {
         a {
-            background: getColour('blue');
-            color: #fff;
+            background: $base-border-color;
         }
     }
 }
