--- a/components/_stats.scss
+++ b/components/_stats.scss
@@ -1,5 +1,5 @@
 ///
-/// Simple object to display key–value statistic-like information.
+/// Simple component to display key–value statistic-like information.
 ///
 /// @name stats
 /// @group component
