--- a/objects/_lozenge.scss
+++ b/objects/_lozenge.scss
@@ -4,7 +4,7 @@
 /// however by default the text colour will be white.
 ///
 /// @name lozenge
-/// @group component
+/// @group object
 ///
 /// @example
 ///     <p>This <span class="loz">here</span> is a lozenge!</p>
