add greek letter header helper classes and .lead type helper class

--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -4,6 +4,9 @@
 /// at giving you what you need here. Any new design patterns we see in terms of
 /// typography should be reflected here.
 ///
+/// The heading classes have been added here as it seems more appropriate than
+/// in objects or even generic.
+///
 
 body {
     background: #fff;
@@ -17,6 +20,17 @@ body {
 @include headings(1, 6) {
     font-family: $heading-font-family;
     margin: 0 0 $half-spacing-unit;
+}
+
+h1, .alpha, %alpha { font-size: 2.5em; }
+h2, .beta, %alpha { font-size: 2em; }
+h3, .gamma, %alpha { font-size: 1.75em; }
+h4, .delta, %alpha { font-size: 1.5em; }
+h5, .epsilon, %alpha { font-size: 1.25em; }
+h6, .zeta, %alpha { font-size: 1em; }
+.lead, %lead {
+    font-size: 1.25em;
+    font-weight: bold;
 }
 
 p {
