card set to display block to cater for a tag

--- a/components/_card.scss
+++ b/components/_card.scss
@@ -19,6 +19,7 @@
 ///
 
 .card {
+    display: block;
     margin-bottom: $base-spacing-unit;
     border: $base-border;
     border-radius: $base-border-radius;
