rename file alerts to alert add toggle for over opinionated components

--- a/_finesse.scss
+++ b/_finesse.scss
@@ -48,7 +48,7 @@
 /// for 'quick wins'. Some components provide a modifer class `--finesse` which
 /// will provide a more opinionated design layer on top of the base component.
 ///
-@import "components/alerts";
+@import "components/alert";
 @import "components/card";
 @import "components/footer";
 @import "components/modal";
