--- a/components/_card.scss
+++ b/components/_card.scss
@@ -18,6 +18,8 @@
 ///     </div>
 ///
 
+@if $disable-card == false {
+
 .card {
     display: block;
     margin-bottom: $base-spacing-unit;
@@ -38,3 +40,5 @@
             margin-bottom: 0;
         }
     }
+
+}
