--- a/objects/_buttons.scss
+++ b/objects/_buttons.scss
@@ -15,6 +15,8 @@
 ///     <button class"btn btn--blue btn--hollow">Button text</button>
 ///
 
+@if $disable-buttons == false {
+
 /// Creating default modifers using $action-color
 .btn {
     appearance: none;
@@ -101,4 +103,6 @@
     &:focus {
         color: #fff;
     }
+}
+
 }
